@@ -2,11 +2,12 @@ package io.swagger.client.auth;
 
 import io.swagger.client.Pair;
 
+import com.migcomponents.migbase64.Base64;
+
 import java.util.Map;
 import java.util.List;
 
 import java.io.UnsupportedEncodingException;
-import javax.xml.bind.DatatypeConverter;
 
 public class HttpBasicAuth implements Authentication {
   private String username;
@@ -29,10 +30,10 @@ public class HttpBasicAuth implements Authentication {
   }
 
   @Override
-  public void applyToParams(List<Pair> queryParams, Map<String, String> headerParams) {
+  public void applyToParams(List<Pair> queryParams, Map<String, Object> headerParams) {
     String str = (username == null ? "" : username) + ":" + (password == null ? "" : password);
     try {
-      headerParams.put("Authorization", "Basic " + DatatypeConverter.printBase64Binary(str.getBytes("UTF-8")));
+      headerParams.put("Authorization", "Basic " + Base64.encodeToString(str.getBytes("UTF-8"), false));
     } catch (UnsupportedEncodingException e) {
       throw new RuntimeException(e);
     }
